--- a/styles/style.css
+++ b/styles/style.css
@@ -17,15 +17,35 @@
 	/* startje */
 	--color-text:#111;
 	--color-background:#eee;
+	--font-display: "Abril Fatface", serif;
 }
-
-
-
 
 
 /****************/
 /* JOUW STYLING */
 /****************/
 
-/* jouw code */
+header {
+	background-color: gainsboro;
+	font-family: var(--font-display);
+	font-size: clamp(2rem, 5vw, 3.5rem);
+	letter-spacing: .08em;
+	min-width: 0;
 
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 2rem;
+	padding-left: 1rem;
+}
+
+.lab_logo {
+	width: 4em;
+}
+
+@media (max-width: 768px) {
+	header{
+		flex-direction: column;
+		padding-top: 1rem;
+	}
+}
