--- a/styles/style.css
+++ b/styles/style.css
@@ -33,19 +33,19 @@ header {
 	min-width: 0;
 
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	gap: 2rem;
-	padding-left: 1rem;
+	padding: 1rem 1.5rem;
 }
 
 .lab_logo {
 	width: 4em;
+	height: auto;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
 	header{
 		flex-direction: column;
-		padding-top: 1rem;
+		text-align: center;
 	}
 }
