--- a/styles/style.css
+++ b/styles/style.css
@@ -28,14 +28,14 @@
 header {
 	display: flex;
 	align-items: center;
-	gap: 2rem;
+	gap: clamp(.5rem, 5vw, 2rem);
 	padding: 1rem 1.5rem;
 	background-color: gainsboro;
 }
 
-h1 {
+header h1 {
 	font-family: var(--font-display);
-	font-size: clamp(1rem, 5vw, 3.5rem);
+	font-size: clamp(1.85rem, 5vw, 3.5rem);
 }
 
 .lab_logo {
